7035117: G1: nsk/stress/jni/jnistress002 fails with assertion failure

Allow long type for offset in G1 code in compiler implementations of Unsafe.getObject

Reviewed-by: never, iveresov